tests/ui/issues/issue-16338.stderr
error[E0308]: mismatched types
  --> $DIR/issue-16338.rs:7:9
   |
LL |     let Slice { data: data, len: len } = "foo";
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ----- this expression has type `&str`
   |         |
   |         expected `str`, found `Slice<_>`
   |
   = note: expected type `str`
            found struct `Slice<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
